force-app/main/default/objects/mafaili__Folder_Structure__c/mafaili__Folder_Structure__c.object-meta.xml
<CustomObject>
    <label>Folder Structure</label>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folders Structure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>