force-app/main/default/objects/mafaili__Folder_Structure__c/fields/mafaili__Field_on_Main_Object_to_Store_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Field_on_Main_Object_to_Store_Folder_Id__c</fullName>
    <label>Field on Main Object to Store Folder Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>