force-app/main/default/objects/mafaili__Folder_Structure__c/fields/mafaili__Field_to_Use_For_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Field_to_Use_For_Folder_Name__c</fullName>
    <label>Field to Use For Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>