force-app/main/default/objects/mafaili__Folder_Structure__c/fields/mafaili__Parent_Folder__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Parent_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Folder</label>
    <referenceTo>mafaili__Folder_Structure__c</referenceTo>
    <relationshipLabel>Child Folders</relationshipLabel>
    <relationshipName>Folders_Structure</relationshipName>
    <type>Lookup</type>
</CustomField>