force-app/main/default/objects/mafaili__Folder_Structure__c/fields/mafaili__Technical_Name__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Technical_Name__c</fullName>
    <formula>IF(ISBLANK( mafaili__Field_to_Use_For_Folder_Name__c ), Name, mafaili__Field_to_Use_For_Folder_Name__c )</formula>
    <label>Technical Name</label>
    <type>Text</type>
</CustomField>