force-app/main/default/objects/mafaili__Folder_Structure__c/fields/mafaili__Top_Folder__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Top_Folder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Folder</label>
    <type>Checkbox</type>
</CustomField>