force-app/main/default/objects/mafaili__Folder_Structure__c/listViews/mafaili__All.listView-meta.xml
<ListView>
    <fullName>mafaili__All</fullName>
    <columns>NAME</columns>
    <columns>mafaili__Top_Folder__c</columns>
    <columns>mafaili__Parent_Folder__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>mafaili__Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>