force-app/main/default/objects/mafaili__Folder_Structure__c/listViews/mafaili__All_Top_Folders.listView-meta.xml
<ListView>
    <fullName>mafaili__All_Top_Folders</fullName>
    <columns>NAME</columns>
    <columns>mafaili__Top_Folder__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>mafaili__Top_Folder__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Top Folders</label>
</ListView>